Fix absence of .collapse

--- a/newbie/faq-accordion-card-main/css/style.css
+++ b/newbie/faq-accordion-card-main/css/style.css
@@ -85,6 +85,10 @@ h1 {
     
 }
 
+.collapse {
+    display: none;
+}
+
 .pic_transform {
     transform: rotate(180deg);
     height: 10px;
